add auth middleware (check bearer token from header)
