# pkg/user/controller/authControllerImpl.go
@@ -17,14 +17,13 @@ func NewAuthController(authService _authService.AuthService) AuthController {
 	return &authControllerImpl{authService: authService}
 }
 
-// Register godoc
-// @Summary Register new user
-// @Description Register new user
-// @Tags Authentication
+// @Summary Register user
+// @Description Register a new user
+// @Tags 	Authentication
 // @Accept json
 // @Produce json
-// @Param body body model.RegisterRequest true "Register Request"
-// @Success 200 {object} model.UserResponse
+// @Param user body model.RegisterRequest true "User object"
+// @Success 201 {object} model.UserResponse
 // @Router /v1/auth/register [post]
 func (c *authControllerImpl) Register(ctx *fiber.Ctx) error {
 	req := _userModel.RegisterRequest{}
@@ -42,15 +41,14 @@ func (c *authControllerImpl) Register(ctx *fiber.Ctx) error {
 	})
 }
 
-// NewPIN godoc
-// @Summary Create new pin for user
-// @Description Create new pin for user
+// @Summary New PIN
+// @Description Create a new PIN for a user
 // @Tags Authentication
 // @Accept json
 // @Produce json
 // @Param id path int true "User ID"
-// @Param body body model.NewPINRequest true "New PIN Request"
-// @Success 200 {object} model.UserResponse
+// @Param pin body model.NewPINRequest true "New PIN object"
+// @Success 201 {object} model.UserResponse
 // @Router /v1/auth/new-pin/{id} [post]
 func (c *authControllerImpl) NewPIN(ctx *fiber.Ctx) error {
 	id, err := strconv.Atoi(ctx.Params("id"))
@@ -73,13 +71,12 @@ func (c *authControllerImpl) NewPIN(ctx *fiber.Ctx) error {
 	})
 }
 
-// LoginWithPassword godoc
 // @Summary Login with password
-// @Description Login with password
+// @Description Login a user with password
 // @Tags Authentication
 // @Accept json
 // @Produce json
-// @Param body body model.LoginWithPasswordRequest true "Login with password request"
+// @Param user body model.LoginWithPasswordRequest true "User object"
 // @Success 200 {object} model.LoginResponse
 // @Router /v1/auth/login [post]
 func (c *authControllerImpl) LoginWithPassword(ctx *fiber.Ctx) error {
@@ -98,13 +95,12 @@ func (c *authControllerImpl) LoginWithPassword(ctx *fiber.Ctx) error {
 	})
 }
 
-// LoginWithPin godoc
 // @Summary Login with pin
-// @Description Login with pin
+// @Description Login a user with pin
 // @Tags Authentication
 // @Accept json
 // @Produce json
-// @Param body body model.LoginWithPinRequest true "Login with pin request"
+// @Param user body model.LoginWithPinRequest true "User object"
 // @Success 200 {object} model.LoginResponse
 // @Router /v1/auth/login-with-pin [post]
 func (c *authControllerImpl) LoginWithPin(ctx *fiber.Ctx) error {
